--- a/predictive-analytics-h2o.rmd
+++ b/predictive-analytics-h2o.rmd
@@ -7,36 +7,54 @@ library(h2o)
 
 ```{r}
 # Task 3: Read the Excel Sheets
-
-
+path <- "UCI_bank_marketing.xlsx"
+sheets <- excel_sheets(path)
+# View sheets
+sheets
 ```
 
 
 ```{r}
 # Task 3.1: Explore Data in each Sheet
-
+sheets %>%
+  map(~ read_excel(path = path, sheet = .)) %>%
+  set_names(sheets)
 
 ```
 
 
 ```{r}
 # Task 3.2: Join Data by ID Column (VLOOKUP Equivalent)
-
-
+data_joined <- sheets[4:7] %>%
+  map (~ read_excel(path = path, sheet = .)) %>% 
+  #left join by the common column
+  reduce (left_join) 
+#Joined three times -> 4 sheets
+#Look at distributions - check for class imbalance problem
+table(data_joined$TERM_DEPOSIT)
+##Term deposit is the response variable, therefore look at its distribution.
+##Number of clients that did not enroll in term deposit greatly exceeds those that did, therefore a class imbalance exists
 ```
 
 ```{r}
 # Task 4: Start H2O Cluster
-
+##cluster - where all the computations and data will be stored
+h2o.init(max_mem_size="4g")
 
 ```
 
 ```{r}
 # Task 4.1: Data Preparation
+##convert characters/strings into factors 
+data_joined <- data_joined %>%
+  mutate_if(is.character, as.factor)
 
-
-
-
+#convert tibble into H2O frame
+train <- as.h2o(data_joined)
+y <-  "TERM_DEPOSIT"
+#train[,y] <- as.factor(train[,y]) -> if values for term deposit was in 0 or 1 rather than yes or no
+##remove unique ID column because it is not predictive. If predictive -> could be a leakage issue
+x <- setdiff(names(train), c(y,"ID"))
 ```
 
 ```{r}
